yoshimi 1.5.10 M

2019-2-26 Will
* MasterUI now only references files in widow code.
* Removed file extension references in MicrotonalUI.
* Removed file extension references in MidiLearnUI.
* Removed file extension references in VectorUI.
* Removed file extension references in config.cpp

2019-2-25 Will
* No more direct file access in 'Cmdinterface'.
* New string parser in 'MiscFuncs'.
* Improved 'XMLwrapper'.
* Most file extension definitions now standardised
  but fltk filer calls still fixed strings :(
* No more direct file access in 'Microtonal'.

2019-2-24 Will
* All direct file access removed from 'Bank'
  except two directory scans.

2019-2-23 Will
* Installed placeholder FileMgr in /src/Interface
  This will eventually handle all actual file operations
  for consistency and simlifying porting to other systems.
* Started moving file functions from MiscFuncs to FileMgr.
* Completed transfers from MiscFuncs to FileMgr.
  Other calls to find in other files :(

2019-2-20 Will.
* Added missing LFO intensity control description to CLI.
* Adjusted CMakeLists.txt for better 'native' recognition.
* Copied in Rob's FLTK fix.
* Moved cairo tests inside fltk build option.

2019-2-14 Will
* Now only the main instance can change bank structure.
  Others can read/change their current selected ones.
* Updated dependencies.

2019-02-10 Rob
* put FLTK sources & libs back in old places in CMakeLists -- tacking
  the libs on at end of the list sometimes broke linker command line.
  It's an empty string when GUI_FLTK=0, anyway.

2019-2-6 Will
* Almost completed GUI detachment for headless.
* Applied patch from Rob - completes headless builds.

2019-2-1 Will
* Enabled headless build (Not LV2).
  Not fully tested.

2019-1-27 Will
* Enabled full CLI start sequence .state .xmz .xiz .xly
  but can be either jack session or state not both.

2019-1-24 Will
* Complex float rounding towards zero now just int(n).
  Rationale: This in most cases restores the original