@@ -3,8 +3,7 @@ BUG! If jack is selected for audio but there are no physical ports Yoshimi quits
 
 Minor bug Multi instances produce jack error reports when main instance closed, even if they have been closed first - been there since V 1.4.1 :(
 
-Master UI, MidiLearnUI, Vector UI making direct calls
-to FileMgr :(
+Master UI windows makes direct calls to FileMgr :(
 
 Revise GUI voice list related to voice editor.
 
