@@ -22,7 +22,7 @@
 #include <iostream>
 #include "WavFile.h"
 using namespace std;
-
+/*  ######## currently none of this is used
 WavFile::WavFile(string filename, int samplerate, int channels)
     :sampleswritten(0), samplerate(samplerate), channels(channels),
       file(fopen(filename.c_str(), "w"))
@@ -102,3 +102,5 @@ void WavFile::writeMonoSamples(int nsmps, short int *smps)
         sampleswritten += nsmps;
     }
 }
+*/
+
